[gd_scene load_steps=17 format=3 uid="uid://q2ctoee5r2jh"]

[ext_resource type="PackedScene" uid="uid://dfod5bibfyo1n" path="res://scenes/entities/enemies/enemy.tscn" id="1_bbn8a"]
[ext_resource type="PackedScene" uid="uid://c16qxxd7mhpfp" path="res://graphics/characters/skeleton mage/Skeleton_Mage.glb" id="2_d8sw1"]
[ext_resource type="Script" path="res://scenes/entities/enemies/skeleton_mage.gd" id="2_vb55l"]
[ext_resource type="PackedScene" uid="uid://02ix7c6cfe1u" path="res://graphics/weapons/wand.gltf" id="4_tmu6s"]
[ext_resource type="Texture2D" uid="uid://cbf5176yt1e2d" path="res://graphics/weapons/barbarian_texture.png" id="5_imrg1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p5m7x"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gco4d"]
albedo_texture = ExtResource("5_imrg1")

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oi42u"]
animation = &"Spellcast_Shoot"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_u0qn4"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y2fpl"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_huaud"]
animation = &"Walking_B"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ygt8n"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j7ugy"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4n27q"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_mgjqa"]
states/idle/node = SubResource("AnimationNodeAnimation_y2fpl")
states/idle/position = Vector2(347, 101.5)
states/walk/node = SubResource("AnimationNodeAnimation_huaud")
states/walk/position = Vector2(514.5, 100.75)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_ygt8n"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_j7ugy"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_4n27q")]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_f8wbj"]
nodes/AttackAnimation/node = SubResource("AnimationNodeAnimation_oi42u")
nodes/AttackAnimation/position = Vector2(540, 260)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_u0qn4")
nodes/AttackOneShot/position = Vector2(870, 110)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_mgjqa")
nodes/MoveStateMachine/position = Vector2(530, 90)
nodes/output/position = Vector2(1190, 160)
node_connections = [&"AttackOneShot", 0, &"MoveStateMachine", &"AttackOneShot", 1, &"AttackAnimation", &"output", 0, &"AttackOneShot"]

[node name="Skeleton_mage" instance=ExtResource("1_bbn8a")]
script = ExtResource("2_vb55l")

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_p5m7x")

[node name="skin" parent="." index="1" instance=ExtResource("2_d8sw1")]

[node name="Skeleton3D" parent="skin/Rig" index="0"]
bones/1/position = Vector3(0, 0.384738, 0)
bones/1/rotation = Quaternion(-1.11123e-10, 0.0431578, 2.57241e-09, 0.999068)
bones/1/scale = Vector3(1, 1, 1)
bones/2/rotation = Quaternion(-6.93889e-18, 7.10543e-15, 4.93038e-32, 1)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(8.27181e-25, 3.72529e-09, 0, 1)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(0.212007, 0.134132, 7.92996e-08)
bones/4/rotation = Quaternion(-0.557476, -0.0590658, -0.640697, 0.524632)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(-1.55849e-09, -5.38685e-08, -0.504149, 0.863617)
bones/5/scale = Vector3(1, 0.999999, 1)
bones/6/rotation = Quaternion(1.44633e-08, 1.26672e-08, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.321559, -0.329924, 0.148288, 0.875077)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(8.34843e-10, 0.0961252, -0.0575)
bones/8/rotation = Quaternion(0.000240862, 0.000240842, -0.706222, 0.70799)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(-0.212007, 0.134132, 8.6814e-08)
bones/9/rotation = Quaternion(-0.615825, 0.0791294, 0.615388, 0.485589)
bones/9/scale = Vector3(0.999999, 0.999999, 1)
bones/10/rotation = Quaternion(3.3384e-08, 5.58763e-08, 0.527027, 0.849849)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-4.94615e-10, -1.45974e-08, -0.0266581, 0.999645)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.320064, 0.305576, -0.230134, 0.86673)
bones/12/scale = Vector3(1, 1, 1)
bones/13/position = Vector3(-1.5736e-08, 0.0961251, -0.0575)
bones/13/rotation = Quaternion(0.000782602, 0.000921787, 0.706295, 0.707917)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(-5.80608e-11, -0.0313417, -1.88012e-09, 0.999509)
bones/14/scale = Vector3(1, 1, 1)
bones/16/position = Vector3(0.170945, 0.113587, 1.59941e-08)
bones/16/rotation = Quaternion(0.992759, 0.0831522, 0.0757314, 0.0421792)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(0.276965, 6.50208e-08, -1.93932e-07, 0.96088)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(-0.559865, -0.20674, 0.056362, 0.800396)
bones/18/scale = Vector3(1, 1, 0.999999)
bones/19/rotation = Quaternion(4.5929e-05, 0.920199, -0.391452, -1.03456e-05)
bones/19/scale = Vector3(1, 0.999998, 1)
bones/20/position = Vector3(-0.170945, 0.113587, 1.55755e-08)
bones/20/rotation = Quaternion(0.995548, -0.0308245, 0.0308887, 0.083547)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(0.336983, -6.23598e-08, 2.3366e-07, 0.941511)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(-0.592563, 0.113993, -0.0139704, 0.797295)
bones/22/scale = Vector3(1, 1, 0.999999)
bones/23/rotation = Quaternion(-8.93489e-05, 0.920222, -0.391398, 2.0291e-05)
bones/23/scale = Vector3(1, 0.999998, 1)
bones/24/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/25/position = Vector3(0.202182, 0.0259903, 0.205181)
bones/25/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/26/rotation = Quaternion(9.65792e-09, 1.77955e-09, 0.985719, -0.168398)
bones/27/position = Vector3(-2.60494e-08, 0.213436, -5.1715e-09)
bones/27/rotation = Quaternion(-1.01273e-07, 0.391084, 0.920355, -3.35091e-08)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(8.58988e-09, 0.16565, -2.40963e-09)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(1, -2.33136e-09, 1.99777e-07, -1.34211e-15)
bones/29/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(4.16335e-17, -6.74098e-17, -1.94669e-08, 1)
bones/31/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/32/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/33/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/34/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/34/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/34/scale = Vector3(1, 1, 1)
bones/35/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/35/rotation = Quaternion(-0.391084, -6.73931e-08, -6.22002e-08, 0.920355)
bones/35/scale = Vector3(1, 1, 1)
bones/36/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/36/scale = Vector3(1, 1, 1)
bones/37/rotation = Quaternion(1.00614e-16, -6.74098e-17, -1.57416e-08, 1)
bones/37/scale = Vector3(1, 1, 1)
bones/38/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/39/position = Vector3(0.520841, 0.784893, -0.0576374)
bones/39/rotation = Quaternion(0.794627, -1.11759e-07, 0.607098, -5.96046e-08)
bones/40/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/41/position = Vector3(-0.510844, 0.784893, 0.0597369)
bones/41/rotation = Quaternion(0.758253, 1.52737e-07, -0.651961, 1.11759e-08)
bones/41/scale = Vector3(1, 1, 1)

[node name="Skeleton_Mage_Hat" parent="skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.99972, -1.40143e-09, 0.0236466, 1.39341e-09, 1, 3.55686e-10, -0.0236466, -3.22637e-10, 0.99972, 0.000286014, 1.76317, -6.90145e-06)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="skin/Rig/Skeleton3D" index="9"]
transform = Transform3D(0.000554361, -0.152244, -0.988342, -0.999996, -0.00226552, -0.000211307, -0.0022074, 0.98834, -0.152246, -0.490798, 0.637896, 0.107184)
bone_name = "handslot.r"
bone_idx = 13

[node name="wand2" parent="skin/Rig/Skeleton3D/BoneAttachment3D" index="0" instance=ExtResource("4_tmu6s")]

[node name="wand" parent="skin/Rig/Skeleton3D/BoneAttachment3D/wand2" index="0"]
material_override = SubResource("StandardMaterial3D_gco4d")

[node name="AnimationTree" parent="." index="2"]
root_node = NodePath("../skin")
tree_root = SubResource("AnimationNodeBlendTree_f8wbj")
anim_player = NodePath("../skin/AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0

[node name="AttackTimer" parent="Timers" index="0"]
autostart = true

[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]

[editable path="skin"]
[editable path="skin/Rig/Skeleton3D/BoneAttachment3D/wand2"]
